--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -38,6 +38,7 @@ stringData:
             total_max_scrape_duration = 90      # Max overall duration of all metrics collection (parallel fetch only)
 
             persistent_router_connection_pool = True  # Use a persistent router connections pool between scrapes
+            persistent_dhcp_cache = True              # Persist DHCP cache between metric collections            
             compact_default_conf_values = False       # Compact mktxp.conf, so only specific values are kept on the individual routers' level
             prometheus_headers_deduplication = False  # Deduplicate Prometheus HELP / TYPE headers in the metrics output 
     mktxp.conf: |
