feat: Add configurable `http_server_threads`

--- a/mktxp/cli/config/_mktxp.conf
+++ b/mktxp/cli/config/_mktxp.conf
@@ -30,6 +30,7 @@
     max_worker_threads = 5              # Max number of worker threads that can fetch routers (parallel fetch only)
     max_scrape_duration = 30            # Max duration of individual routers' metrics collection (parallel fetch only)
     total_max_scrape_duration = 90      # Max overall duration of all metrics collection (parallel fetch only)
+    http_server_threads = 16            # Number of worker threads for the HTTP server
 
     persistent_router_connection_pool = True  # Use a persistent router connections pool between scrapes
     persistent_dhcp_cache = True              # Persist DHCP cache between metric collections
